--- a/lang/es.json
+++ b/lang/es.json
@@ -272,20 +272,52 @@
       "subtitle": "Trabajamos con las mejores tecnologías para tus proyectos"
     },
     "hosting": {
-      "title": "Planes de hosting",
-      "subtitle": "¡Aloja tu proyecto con uno de nuestros planes flexibles!",
+      "title": "Déjanos encargarnos del <keyword>hosting</keyword> de tu proyecto",
+      "subtitle": "Aloja tu proyecto con nosotros y olvídate de los problemas técnicos",
       "cards": {
-        "basic": {
-          "title": "Plan Básico",
-          "description": "Ideal para proyectos personales y sitios web pequeños."
+        "web": {
+          "title": "Hosting Web",
+          "description": "Alojamiento profesional diseñado para propietarios de negocios que desean sitios web seguros, fiables y optimizados sin complicaciones técnicas.",
+          "features": {
+            "multiple_websites": {
+              "title": "Aloja hasta 5 sitios web",
+              "description": "Aloja hasta 5 sitios web en un solo plan — ideal para un sitio principal, páginas de aterrizaje o una tienda en línea."
+            },
+            "professional_email": {
+              "title": "Correo empresarial personalizado",
+              "description": "Obtén una dirección de correo con tu propio dominio (tú@tunegocio.com) para proyectar una imagen profesional y confiable."
+            },
+            "custom_php": {
+              "title": "Soporte PHP y HTML",
+              "description": "Compatibilidad con sitios web estáticos en HTML y aplicaciones en PHP, incluyendo WordPress."
+            },
+            "team_access": {
+              "title": "Acceso seguro para equipos",
+              "description": "Otorga acceso seguro a empleados o socios sin compartir credenciales sensibles."
+            }
+          }
         },
-        "advanced": {
-          "title": "Plan Avanzado",
-          "description": "Diseñado para negocios en crecimiento y sitios web dinámicos."
-        },
-        "pro": {
-          "title": "Plan Profesional",
-          "description": "La mejor opción para proyectos empresariales de alto rendimiento."
+        "cloud": {
+          "title": "Cloud Hosting",
+          "description": "Alojamiento flexible y escalable que combina la potencia de recursos dedicados con la fiabilidad de la nube. Ideal para negocios que necesitan un rendimiento constante.",
+          "features": {
+            "dedicated_resources": {
+              "title": "Recursos dedicados",
+              "description": "CPU, RAM y almacenamiento garantizados y reservados para tus sitios web sin compartir con otros usuarios."
+            },
+            "auto_scaling": {
+              "title": "Escalado automático",
+              "description": "Tus recursos de alojamiento se ajustan automáticamente para manejar picos de tráfico o el crecimiento de tu negocio."
+            },
+            "flexible_stack": {
+              "title": "Aplicaciones flexibles",
+              "description": "Ejecuta diferentes aplicaciones y frameworks más allá de WordPress, incluyendo stacks personalizados adaptados a tu proyecto."
+            },
+            "high_concurrency": {
+              "title": "Soporta alto tráfico",
+              "description": "Atiende a un gran número de visitantes y transacciones al mismo tiempo sin perder rendimiento."
+            }
+          }
         }
       }
     }
