--- a/lang/es.json
+++ b/lang/es.json
@@ -327,8 +327,11 @@
       "title": "Portafolio"
     },
     "hero": {
-      "title": "Nuestro Portafolio",
-      "subtitle": "Descubre una selección de nuestros proyectos más destacados, que reflejan nuestro compromiso con la innovación y la calidad en el desarrollo web."
+      "badge": "¡Nuestro Asombroso Portafolio!",
+      "title": "<keyword>Sitios web</keyword> exitosos que hemos hecho",
+      "subtitle": "Descubre una selección de nuestros proyectos más destacados, que reflejan nuestro compromiso con la innovación y la calidad en el desarrollo web.",
+      "projects": "Proyectos",
+      "success": "Exitosos"
     },
     "projects": {
       "title": "Nuestros proyectos",
