feat: improved responsivness and added cta to hero section in portfolio page

--- a/lang/en.json
+++ b/lang/en.json
@@ -330,6 +330,7 @@
       "badge": "Our Awesome Portfolio!",
       "title": "Successful <keyword>websites</keyword> we have made",
       "subtitle": "Discover a selection of our most outstanding projects, which reflect our commitment to innovation and quality in web development.",
+      "button": "Get a budget",
       "projects": "Projects",
       "success": "Success"
     },
