--- a/lang/es.json
+++ b/lang/es.json
@@ -330,6 +330,7 @@
       "badge": "¡Nuestro Asombroso Portafolio!",
       "title": "<keyword>Sitios web</keyword> exitosos que hemos hecho",
       "subtitle": "Descubre una selección de nuestros proyectos más destacados, que reflejan nuestro compromiso con la innovación y la calidad en el desarrollo web.",
+      "button": "Pide un presupuesto",
       "projects": "Proyectos",
       "success": "Exitosos"
     },
