--- a/lang/en.json
+++ b/lang/en.json
@@ -335,22 +335,11 @@
       "success": "Success"
     },
     "projects": {
-      "title": "Our projects",
-      "subtitle": "Websites we have worked on",
-      "sites": {
-        "tailorsheet": {
-          "title": "TailorSheet",
-          "body": "Apps courses and design with AppSheet. Learn from scratch with our courses and tutorials in Spanish. We design apps for your business in record time."
-        },
-        "mesgo": {
-          "title": "Mesgo",
-          "body": "Landing Page of Mexican Engineering Supply Group, a company specialized in the distribution of industrial materials, with a focus on electrical, electronic and mechanical engineering."
-        },
-        "jaimemorales": {
-          "title": "Jaime Morales",
-          "body": "Landing page of Jaime Morales, a cybersecurity expert that offers services and an specialized consultant, tutor and implementing AI with a cybersecurity approach."
-        }
-      }
+      "title": "<keyword>Web projects</keyword> we have worked in",
+      "subtitle": "Websites that we have built or improved to get more clients to their businesses",
+      "view_case_study": "View Case Study (Coming Soon)",
+      "technologies_used": "Technologies used",
+      "view_website": "View Website"
     },
     "clients": {
       "title": "Testimonials",
