--- a/lang/en.json
+++ b/lang/en.json
@@ -347,13 +347,8 @@
       "title": "Contact"
     },
     "hero": {
-      "title": "Contact",
-      "subtitle": "need a quick answer?",
-      "cards": {
-        "email": "E-mail address",
-        "phone": "Phone number",
-        "whatsapp": "Click Here"
-      }
+      "title": "Contact Us",
+      "subtitle": "Are you ready to take your business online? We're here to help you create a professional website."
     },
     "form_section": {
       "title": "do you want to get your project started?",
@@ -393,6 +388,28 @@
         "success": "The email has been sent successfully!",
         "button": "Send message"
       }
+    },
+    "info_section": {
+        "title": "need more ways to reach us?",
+        "subtitle": "find our contact details below — we respond quickly!",
+        "cards": {
+            "email": {
+                "title": "Email address",
+                "tooltip": "Send us a direct email"
+            },
+            "phone": {
+                "title": "Phone number",
+                "tooltip": "Give us a direct call"
+            },
+            "whatsapp": {
+                "title": "Send us a message with WhatsApp",
+                "message": "I'm interested in working with you to make a project or improve a current one."
+            },
+            "quick_response": {
+                "title": "Quick response time",
+                "message": "We value your time and strive to respond as quickly as possible. Our team is committed to providing clear, helpful answers within hours, not days. Whether you have a simple question or a detailed request, you can count on us for fast, reliable communication every time."
+            }
+        }
     }
   },
   "price_card": {
